--- a/Jellyfin.Plugin.DanmakuExtension/Jellyfin.Plugin.DanmakuExtension.csproj
+++ b/Jellyfin.Plugin.DanmakuExtension/Jellyfin.Plugin.DanmakuExtension.csproj
@@ -26,5 +26,10 @@
     <EmbeddedResource Include="Controllers\Pakku\pinyin_dict.txt" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="Controllers\Service\dandanplay.secret.embedded.json" />
+  </ItemGroup>
+
+
 
 </Project>
